# CohereAIPipeline

./: .env  .env.local  .flake8  .gitignore  MANIFEST.in  README.md  classify.py  main.py  preprocess.py  preprocess_and_classify.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_server.py  text_classification.py
cohereai_pipeline/: preprocess_and_classify.py  validation.py
cohereflow/: classification.py  classify.py  generator.py  models.py  preprocess.py  preprocess_and_classify.py  validation.py
cohereflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cohereflow/utils/: classify_utils.py
cohereguard/: __init__.py  classify.py  cohereguard_generate.py  cohereguard_rail.py  config.py  embed.py  generate.py  main.py  tokenize.py
examples/: app.py  classify.py  main.py  preprocess_and_classify.py
tests/unit_tests/: test_classify.py  test_cohereguard.py  test_generate.py  test_generator.py  test_models.py  test_preprocess.py  test_validation.py
