[tool.poetry]
name = "cohereguard"
version = "0.1.0"
description = ""
authors = ["alexdphan <alexphan0515@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
cohere = "^4.0.4"
uvicorn = "^0.21.0"
nltk = "^3.8.1"
requests = "^2.28.2"
autocorrect = "^2.6.1"
spellchecker = "^0.4"
pydantic = "^1.10.6"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
exclude = ["venv"]
