[metadata]
name = cohereflow
version = 0.0.1
author = Alex Phan
author_email = alexphan0515@gmail.com
description = cohere api pipeline flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexdphan/cohereflow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True