[metadata]
name = cohereguard
version = 0.0.1
author = Alex Phan
author_email = alexphan0515@gmail.com
description = cohere api pipeline flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexdphan/cohereguard
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
exclude = tests